--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,22 +7,23 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[features]
-default = ["console_error_panic_hook"]
-
 [dependencies]
+base64 = "0.13.1"
+urlencoding = "2.1.2"
+hex = "0.4.3"
+md5 = "0.7.0"
+sha1 = "0.10.5"
+sha2 = "0.10.6"
+thiserror = "1.0.37"
+serde = { version = "1.0", features = ["derive"] }
+# Only for wasm32
 wasm-bindgen = "0.2.63"
+serde-wasm-bindgen = "0.4"
 
-# The `console_error_panic_hook` crate provides better debugging of panics by
-# logging them with `console.error`. This is great for development, but requires
-# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
-# code size when deploying.
-console_error_panic_hook = { version = "0.1.6", optional = true }
-
-# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
-# compared to the default allocator's ~10K. It is slower than the default
-# allocator, however.
-wee_alloc = { version = "0.4.5", optional = true }
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = "0.3.60"
+console_error_panic_hook = "0.1.6"
+wee_alloc = "0.4.5"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
