--- a/convert-wasm/Cargo.toml
+++ b/convert-wasm/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-convert = { path = "../convert-crate" }
+convert = { path = "../convert" }
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.4"
 wasm-bindgen = "0.2.69"
