--- a/caido-convert/Cargo.toml
+++ b/caido-convert/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 authors = ["Christopher Guay <chris@caido.io>", "Caido <info@caido.io>"]
 repository = "https://github.com/caido/convert"
 readme = "README.md"
-edition = "2018"
+edition = "2021"
 description = """
 Encoding library for web security applications  
 """
+license = "MIT"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
