npm package release build script

--- a/convert/Cargo.toml
+++ b/convert/Cargo.toml
@@ -14,7 +14,8 @@ WASM bindings for caido/convert crate
 crate-type = ["cdylib"]
 
 [dependencies]
-caido-convert = { path = "../caido-convert" }
+#caido-convert = { path = "../caido-convert" }
+caido-convert = "0.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.4"
 wasm-bindgen = "0.2.69"
