cleaning and add github actions

--- a/convert/Cargo.toml
+++ b/convert/Cargo.toml
@@ -14,8 +14,9 @@ WASM bindings for caido/convert crate
 crate-type = ["cdylib"]
 
 [dependencies]
-#caido-convert = { path = "../caido-convert" }
-caido-convert = "0.1.0"
+#caido-convert = "0.1.0"
+# Replace with the latest caido-convert version when publishing the package on npm
+caido-convert = { path = "../caido-convert" }
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.4"
 wasm-bindgen = "0.2.69"
