--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,8 +1,9 @@
 [toolchain]
-channel = "nightly"
+channel = "1.67.0"
 targets = [
   "wasm32-unknown-unknown",
   "x86_64-apple-darwin",
   "x86_64-pc-windows-gnu",
   "x86_64-unknown-linux-gnu",
 ]
+components = ["rustfmt", "rust-src", "clippy"]
