--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,10 @@ jobs:
       - name: Install rust toolchain 
         run: rustup show
 
-      - name: Install typescript dependencies
+      - name: Build wasm package for tests
+        run: just build-wasm-dev
+
+      - name: Install web-tests dependencies
         run: yarn install
 
       - name: Check format
@@ -36,5 +39,8 @@ jobs:
       - name: Run clippy
         run: just clippy
 
-      - name: Run tests
-        run : just test
+      - name: Run rust tests
+        run: cargo test -p convert 
+
+      - name: Run web-tests 
+        run : just wasm-tests
