--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ on:
       - review_requested
   push:
     branches:
-      - 'ci-cd'
+      - 'main'
 
 concurrency:
   group: validate-${{ github.ref_name }}
