--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -4,6 +4,7 @@ description: "Install dependencies"
 runs:
   using: composite
   steps:
+    - uses: actions/checkout@v3
     - name: Install just
       uses: extractions/setup-just@v1
     - name: Restore cargo cache
