--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "private": true,
+  "scripts": {
+    "release": "yarn exec semantic-release"
+  },
   "workspaces": {
     "packages": [
       "wasm-package",
@@ -7,8 +10,15 @@
     ]
   },
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.7",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "prettier": "^2.7.1",
-    "replace-in-file": "^6.3.5"
+    "replace-in-file": "^6.3.5",
+    "semantic-release": "^20.1.0",
+    "semantic-release-cargo": "^2.2.1"
   },
-  "packageManager": "yarn@4.0.0-rc.25"
+  "packageManager": "yarn@4.0.0-rc.34"
 }
