fix(CI): fix publish order

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -22,15 +22,15 @@
       }
     ],
     [
-      "@semantic-release/exec",
-      {
-        "publishCmd": "./scripts/npm_publish.sh ${nextRelease.version}"
-      }
-    ],
-    [
       "@semantic-release/git",
       {
         "message": "ci(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }
+    ],
+    [
+      "@semantic-release/exec",
+      {
+        "publishCmd": "./scripts/publish.sh ${nextRelease.version}"
       }
     ]
   ]
