fix(CI): update versions, clean release script, fix typos

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -16,7 +16,7 @@
       "@semantic-release/exec",
       {
         "prepareCmd": "./scripts/update-versions.sh ${nextRelease.version}",
-        "publishCmd": "./scripts/publish.sh ${nextRelease.version}"
+        "publishCmd": "./scripts/publish.sh"
       }
     ]
   ]
