--- a/caido-convert/Cargo.toml
+++ b/caido-convert/Cargo.toml
@@ -14,11 +14,11 @@ license = "MIT"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-base64 = "0.13.1"
 bstr = "1.1.0"
-percent-encoding = "2.2.0"
+data-encoding = "2.3.3"
 hex = "0.4.3"
 md5 = "0.7.0"
+percent-encoding = "2.2.0"
 sha1 = "0.10.5"
 sha2 = "0.10.6"
 serde = { version = "1.0", features = ["derive"] }
