--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Setup release dependencies
         uses: ./.github/actions/prepare-release
 
-      - name: Setup github package registry credentials
+      - name: Setup npmjs package registry credentials
         run: |
-          echo 'registry=https://registry.npmjs.org'  > ~/.npmrc
+          echo '@caido:registry=https://registry.npmjs.org'  > ~/.npmrc
           echo '//registry.npmjs.org/:_authToken=$NPM_TOKEN' >> ~/.npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -49,4 +49,4 @@ jobs:
 
       - name: Publish to github package
         run: npm publish
-        working-directory: ./wasm-package 
+        working-directory: ./wasm-package
